fixed content shifting issue

--- a/highscore.css
+++ b/highscore.css
@@ -1,10 +1,6 @@
 h4 {
     color: darkmagenta;
 }
-/*TODO: need to fix submit hiding under footer */
-main {
-    margin-bottom: 100px;
-}
 
 .list-group-item  {
     background: none;
